# rkllm-cli

./: .gitignore  Cargo.toml  README-ja.md  README.md  README_MCP.md  build.rs  mcp_config.toml.sample  test_file.txt
docs/: RKLLM_AGENT_DESIGN.md  RKLLM_RUST_CLI_REQUIREMENTS.md  RKLLM_RUST_CLI_REQUIREMENTS_FILE_CTRL.md  RKLLM_RUST_CLI_REQUIREMENTS_MCP.md  TODO.md  model_templates.md  todo.md  tool_only_guide.md
src/: chat.rs  config.rs  ffi.rs  file_detector.rs  file_ops.rs  file_output_parser.rs  intent.rs  llm.rs  main.rs  prompt_builder.rs  tool_detector.rs  ui.rs
src/mcp/: client.rs  config.rs  mod.rs  types.rs
src/mcp/transport/: mod.rs  stdio.rs
