[package]
name = "rkllm-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
anyhow = "1.0"
thiserror = "2.0"
regex = "1.10"
shellexpand = "3.1"
path-absolutize = "3.1"
mime_guess = "2.0"

# MCP (Model Context Protocol) support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"

[build-dependencies]

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "rkllm-cli"
path = "src/main.rs"
