[package]
name = "rkllm-cli"
version = "0.1.1"
edition = "2024"

[dependencies]
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
anyhow = "1.0"
thiserror = "2.0"
regex = "1.12"
shellexpand = "3.1"
path-absolutize = "3.1"
mime_guess = "2.0"
unicode-segmentation = "1.12"
unicode-width = "0.2"
directories = "6"
once_cell = "1.19"

# MCP (Model Context Protocol) support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"

[build-dependencies]

[dev-dependencies]
tempfile = "3.23"

[[bin]]
name = "rkllm-cli"
path = "src/main.rs"
